# project

./: .gitignore  LICENSE  README.md  a100_real_model_benchmark.py  metadata.json  pyproject.toml
docs/: EVAL_FRAMEWORK_README.md  VLLM_WSL_GUIDE.md  evaluation_framework_summary.md  metrics_spec.md  metrics_spec_v2.md  paper_writing_reference.md  sea_architecture.md
experiments/: run_all.py
hardware/: QFC_ENGINE_RTL_DESIGN.md  README.md  VERIFICATION_REPORT.md
results/: innovation_benchmark_results.json  pcm_ablation_results.json  reviewer_response_results.json  reviewer_response_v2_results.json  reviewer_response_v3_risks.json  sea_convergence_results.json
scripts/: README.md  _figure_style.py  analyze_existing_traces.py  collect_real_traces.py  cxl_microbenchmark_revision_snippets.txt  extract_single_real_trace.py  fig_e2e_serving.py  fig_lssl_stress.py  fig_ordering_breakdown.py  fig_query_sketch.py  fig_regime_map.py  fig_sensitivity.py  fig_size_sensitivity.py  fig_sw_vs_prose_p99.py  fig_task_accuracy.py  figure5_caption.txt  gen_fig_aba_transparent.py  gen_fig_lowbw_pareto.py  gen_fig_sea_lifecycle.py  generate_2x4_figure.py  generate_32k_closed_loop_table.py  generate_cxl_microbenchmark_figure.py  generate_fair_baseline_recalibration_report.py  generate_fig_press_calibration.py  generate_fig_press_calibration_with_c.py  generate_fig_real_cxl_validation.py  generate_figure4_press_methodology.py  generate_figure4_press_methodology_compact.py  generate_figure4_press_methodology_v2.py  generate_figure5_press_with_failure_matrix.py  generate_nature_figure.py  (+50 more)
(+275 files in other folders)
